<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.dokdistsentralprint</groupId>
    <artifactId>dokdistsentralprint</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>app</module>
        <module>schemas</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.2</version>
    </parent>

    <properties>
        <java.version>17</java.version>

        <!-- camel 3.17+ er ikke kompatibel med sftp serveren. Relatert til https://issues.apache.org/jira/browse/CAMEL-17835 -->
        <camel.version>3.16.0</camel.version>
        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
        <resilience4j.version>1.7.1</resilience4j.version>
        <google-cloud.version>25.4.0</google-cloud.version>
        <google-tink.version>1.6.1</google-tink.version>
        <wmq.version>9.2.5.0</wmq.version>

        <dokkat-api>11.0.6</dokkat-api>
        <melding-virksomhet-dokdistfordeling.version>2.0.2</melding-virksomhet-dokdistfordeling.version>

        <!-- Test -->
        <spring-cloud-contract-wiremock.version>3.1.1</spring-cloud-contract-wiremock.version>
        <commons-io.version>2.11.0</commons-io.version>
        <sshd-sftp.version>2.8.0</sshd-sftp.version>

        <!-- Brukt av plugins -->
        <!-- maven-jaxb2-plugin feiler med versjon 3.x.x -->
        <jaxb-runtime.version>2.3.6</jaxb-runtime.version>

        <!-- Plugins -->
        <maven-jaxb2-plugin.version>0.14.0</maven-jaxb2-plugin.version>
        <jaxb2-basics.version>0.12.0</jaxb2-basics.version>
        <jaxb2-basics-annotate.version>1.1.0</jaxb2-basics-annotate.version>
        <jaxb2-fluent-api.version>3.0</jaxb2-fluent-api.version>
        <jaxb-xew-plugin.version>1.11</jaxb-xew-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.dokdistsentralprint</groupId>
                <artifactId>schemas</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>no.nav.meldinger.virksomhet</groupId>
                <artifactId>melding-virksomhet-dokdistfordeling</artifactId>
                <version>${melding-virksomhet-dokdistfordeling.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokkat</groupId>
                <artifactId>dokkat-api</artifactId>
                <version>${dokkat-api}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-spring-boot-bom</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ibm.mq</groupId>
                <artifactId>com.ibm.mq.allclient</artifactId>
                <version>${wmq.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${google-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink</artifactId>
                <version>${google-tink.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink-gcpkms</artifactId>
                <version>${google-tink.version}</version>
            </dependency>
            <!--Selftest metrics-->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot2</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.sshd</groupId>
                <artifactId>sshd-sftp</artifactId>
                <version>${sshd-sftp.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>17</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>